chore: run build after lint

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,9 @@ workflows:
   build:
     jobs:
       - lint
-      - build
+      - build:
+          requires:
+            - lint
     # - deploy:
     #     requires:
     #       - build-node
