chore: do not ignore ci/cd

--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,7 @@
   "extends": [
     "config:recommended"
   ],
-  "ignoreTests": true,
+  "ignoreTests": false,
   "packageRules": [
     {
       "matchUpdateTypes": [
